--- a/requirements.txt
+++ b/requirements.txt
@@ -11,10 +11,13 @@ gunicorn==20.1.0
 oauthlib==3.2.2
 psycopg2==2.9.5
 PyJWT==2.6.0
-python-dotenv==0.19.2
+python-dotenv==1.0.0
+python-http-client==3.3.7
 python3-openid==3.2.0
 pytz==2022.7.1
 requests-oauthlib==1.3.1
+sendgrid==3.6.5
+sendgrid-django==4.2.0
 social-auth-app-django==5.2.0
 social-auth-core==4.4.1
 sqlparse==0.4.3
